--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Sir Walter Raleigh is best known for his plan to make a colony in the New World, what we know as America. The Virginia Colony was to be in what is today both Virginia and North Carolina.
     </p>
     <p>
-      He made several trips to the New World. His first voyage to the Roanoke, North Carolina ended in disaster. It was 1585 and the settlers abandoned the colony because of trouble with natives.
+      He made several trips to the New World. His first voyage to Roanoke, North Carolina ended in disaster. It was 1585 and the settlers abandoned the colony because of trouble with natives.
     </p>
     <p>
       Raleigh took a second larger group of settlers to Roanoke in 1587. He appointed John White as governor and returned to England for more supplies. However, there was war, and the Queen ordered all ships to remain at port to avoid the Spanish Armada. Sir Walter Raleigh was stuck in England for a year.
@@ -34,8 +34,8 @@
       Some think they were killed by the Croatoan tribe. Others think they were taken in by them and allowed to live with them.
     </p>
     <p>
-      Later in life, back in England, he was thrown in jail for being rumored to have plotted against King James. He was released, but then he was killed. Why? The Spanish ambassador demanded him be put to death because his men attacked a Spanish outpost. He was beheaded on October 29, 1618.
+      Later in life, back in England, he was thrown in jail for being rumored to have plotted against King James. He was released, but then he was killed. Why? The Spanish ambassador demanded he be put to death because his men attacked a Spanish outpost. He was beheaded on October 29, 1618.
     </p>
-  </div>    
+  </div>
   </body>
 </html>
