--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       Sir Walter Raleigh is best known for his plan to make a colony in the New World, what we know as America. The Virginia Colony was to be in what is today both Virginia and North Carolina.
     </p>
     <p>
-      He made several trips to the New World. His first voyage to Roanoke, North Carolina ended in disaster. It was 1585 and the settlers abandoned the colony because of trouble with natives.
+      He made several trips to the New World. His first funded voyage to Roanoke, North Carolina ended in disaster. It was 1585 and the settlers abandoned the colony because of trouble with natives.
     </p>
     <p>
-      Raleigh took a second larger group of settlers to Roanoke in 1587. He appointed John White as governor and returned to England for more supplies. However, there was war, and the Queen ordered all ships to remain at port to avoid the Spanish Armada. Sir Walter Raleigh was stuck in England for a year.
+      Raleigh funded a second larger group of settlers to try and establish Roanoke in 1587. He appointed John White as governor and returned to England for more supplies. However, there was war, and the Queen ordered all ships to remain at port to avoid the Spanish Armada. Sir Walter Raleigh was stuck in England for a year.
     </p>
     <p>
-      However, Raleigh didn’t go straight back to Roanoke. He had heard there were treasures to be found in Cuba. He went there. It took him three years to return to Roanoke.
+      However, Raleigh didn’t go straight back to Roanoke. He had heard there were treasures to be found in Cuba. He went there.
     </p>
     <p>
-      When he returned to the colony, it was gone. The colonists were gone. They had just disappeared. It’s a mystery to this day. The only clue left was letters carved into a tree trunk, CROATOAN.
+      By the time he could have joined the colony, it was gone. The colonists were gone. They had just disappeared. It’s a mystery to this day. The only clue left was letters carved into a tree trunk, CROATOAN.
     </p>
     <p>
       Some think they were killed by the Croatoan tribe. Others think they were taken in by them and allowed to live with them.
